dodanie zarządzania błędami
